Trend param create, delete endpoints implemented & tested
